# ciscoaxl

./: .env  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  LICENSE  README.md  bandit.yml  example.py  examples.py  index.html  intercoms.txt  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/workflows/: ci-merge-main.yml  ci-pull-request.yml  python-ci.yml  python-publish.yml
about/: index.html
ann/: index.html
api/: index.html
calledxform/: index.html
callingxform/: index.html
callpark/: index.html
callpickup/: index.html
ciscoaxl/: __init__.py  add.txt  auto.py  axl-old.py  axl.py  axl_generator.py  config.py  configs.py  exceptions.py  generator.py  get123.txt  helpers.py  list.txt  remove.txt  test_generator.py  tests.py  wsdl.py
ciscoaxl/schema/10.0/: AXLAPI.wsdl  AXLEnums.xsd  AXLSoap.xsd
ciscoaxl/schema/10.5/: AXLAPI.wsdl  AXLEnums.xsd  AXLSoap.xsd
ciscoaxl/schema/11.0/: AXLAPI.wsdl  AXLEnums.xsd  AXLSoap.xsd
ciscoaxl/schema/11.5/: AXLAPI.wsdl  AXLEnums.xsd  AXLSoap.xsd
ciscoaxl/schema/12.5/: AXLAPI.wsdl  AXLEnums.xsd  AXLSoap.xsd
ciscoaxl/schema/8.5/: AXLAPI.wsdl  (+2 more)
cm/: index.html
conferencebridges/: index.html
css/: index.html
cti/: index.html
devicepools/: index.html
deviceprofile/: index.html
deviceprofiles/: index.html
devices/: index.html
dn/: index.html
docs/: about.md  callpickup.md  cm.md  css.md  cti.md  devicepools.md  devices.md  dn.md  hunt.md  index.md  install.md  ldap.md  locations.md  media.md  partitions.md  regions.md  requirements.md  routepatterns.md  routing.md  sql.md  translations.md  trunks.md  users.md  vm.md  xform.md
examples/: index.html
gateway/: index.html
hunt/: index.html
huntgroup/: index.html
huntlist/: index.html
huntpilot/: index.html
install/: index.html
intro/: index.html
ldap/: index.html
linegroup/: index.html
locations/: index.html
media/: index.html
mtp/: index.html
partitions/: index.html
phones/: index.html
rd/: index.html
regions/: index.html
requirements/: index.html
routegroup/: index.html
routelist/: index.html
routepatterns/: index.html
routeplanreport/: index.html
routeplans/: index.html
search/: search_index.json
source/: conf.py  index.rst
sql/: index.html
tests/: base.py  devices.py  dialplan.py  dos_and_sql.py  gateways.py  media.py  test_axl.py  users.py
transcoder/: index.html
translations/: index.html
trunks/: index.html
ucservice/: index.html
users/: index.html
vmpilot/: index.html
vmprofile/: index.html
xform/: index.html
xformprofile/: index.html
(+6 files in other folders)
